--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3,7 +3,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&4I&er&4o&en &4Sp&bi&eder&4(PP)'
+      prefix: '&4I&er&4o&en &4Sp&bi&eder'
       suffix: '&b'
     worlds:
       survival:
@@ -12554,7 +12554,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - kitana
+    - zion
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -13414,7 +13414,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - harleyquinn
+    - kitana
     options:
       name: WWE_AlexaBliss
       prefix: ''
@@ -15036,7 +15036,7 @@ users:
       name: elementia3773
   869b4227-b51e-452e-adbd-48759a6848dd:
     group:
-    - mortal
+    - martianmanhunter
     options:
       name: Grim765Reaper
     permissions: []
@@ -15484,7 +15484,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - flashwallywest
+    - ironspider
     options:
       name: nightghost2
     permissions:
@@ -20179,7 +20179,7 @@ users:
       name: red_bug16
   3be4c2e1-b94f-4644-be50-6b06448019fd:
     group:
-    - onepunchman
+    - impulsebartallen
     options:
       name: B1LLYJ0EFRACTURE
   85847484-526c-43d1-b308-16b68b771550:
