--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -15484,7 +15484,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - ironspider
+    - reverseflasheobardthawne
     options:
       name: nightghost2
     permissions:
@@ -18080,7 +18080,7 @@ users:
       name: Otaku_Law
   79bde3af-7aae-489c-a44d-ceba16cc7b02:
     group:
-    - fanfic79bde3af7aae489ca44dceba16cc7b02
+    - spiderwomangwenstacy
     options:
       name: Razara_Cheshire
     worlds:
@@ -18167,7 +18167,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - spectre
+    - infinitythanos
     options:
       name: HerpaDerp10000
     permissions:
@@ -20179,7 +20179,7 @@ users:
       name: red_bug16
   3be4c2e1-b94f-4644-be50-6b06448019fd:
     group:
-    - impulsebartallen
+    - spidermanmilesmorales
     options:
       name: B1LLYJ0EFRACTURE
   85847484-526c-43d1-b308-16b68b771550:
