--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -195,8 +195,8 @@ v2-logout:
     group: default
     world: greenfield
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
-    group: default
-    world: survival
+    group: deathrun
+    world: deathrun
   78af88f4-cd13-4950-a737-7d36b15ead56:
     group: default
     world: greenfield
@@ -919,8 +919,8 @@ v2-logout:
     group: default
     world: greenfield
   3be4c2e1-b94f-4644-be50-6b06448019fd:
-    group: spleeflobby
-    world: spleeflobby
+    group: default
+    world: greenfield
   85aa44f4-9f3b-45dc-9ea5-9bf2b00d9152:
     group: default
     world: greenfield
