--- a/Magic/data/spells.yml
+++ b/Magic/data/spells.yml
@@ -595,6 +595,9 @@ lootshop:
 clayshop:
   cast_count: 0
   last_cast: 0
+telekinisis:
+  cast_count: 0
+  last_cast: 0
 disposal:
   cast_count: 0
   last_cast: 0
