--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,19 @@
 groups:
+  jeangrey:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&eJe&1an &eGr&de&1y'
+      suffix: '&d'
+    worlds:
+      survival:
+        permissions:
+        - essentials.msg
+        - ch.alias.hoveron
+        - ch.alias.hoveroff
+        - magic.cast.telekinisis
+        - magic.cast.forcefield
+        - magic.commands.cast
   ironspider:
     inheritance:
     - commonherotraits
@@ -11025,6 +11040,24 @@ groups:
         - ch.alias.run2
         - ch.alias.run1
         - ch.alias.run0
+  fanficca7e8de830f043c59701982c10ea9459:
+    inheritance:
+    - commonherotraits
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.fanficchatcolor
+        - ch.alias.fanficname
+        - ch.alias.fanficlaser
+        - ch.alias.jump2
+        - ch.alias.jump1
+        - ch.alias.jump0
+        - ch.alias.haste2
+        - ch.alias.haste1
+        - ch.alias.haste0
+        - ch.alias.run2
+        - ch.alias.run1
+        - ch.alias.run0
 schema-version: 1
 users:
   001b0b15-2f00-4ce1-acff-577e465cb175:
@@ -11052,7 +11085,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - onslaught
+    - spidermanpeterparker
     options:
       name: xDcGamer_MCU
     worlds:
@@ -11767,7 +11800,7 @@ users:
       name: lion002
   4087bc7f-c213-47df-bf2d-41650030be45:
     group:
-    - mortal
+    - firestormraymondstein
     options:
       name: Polo_RalphAdam
     worlds:
@@ -13414,7 +13447,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - kitana
+    - harleyquinn
     options:
       name: WWE_AlexaBliss
       prefix: ''
@@ -18080,7 +18113,7 @@ users:
       name: Otaku_Law
   79bde3af-7aae-489c-a44d-ceba16cc7b02:
     group:
-    - spiderwomangwenstacy
+    - fanfic79bde3af7aae489ca44dceba16cc7b02
     options:
       name: Razara_Cheshire
     worlds:
@@ -18167,7 +18200,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - infinitythanos
+    - toothless
     options:
       name: HerpaDerp10000
     permissions:
