--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -60,8 +60,8 @@ v2-logout:
     group: office
     world: office
   4087bc7f-c213-47df-bf2d-41650030be45:
-    world: spleeflobby
-    group: spleeflobby
+    world: greenfield
+    group: default
   16cef4d9-1078-4209-92c6-af6767850007:
     group: default
     world: greenfield
@@ -96,8 +96,8 @@ v2-logout:
     world: office
     group: office
   869b4227-b51e-452e-adbd-48759a6848dd:
-    world: extremesumo
-    group: extremesumo
+    world: greenfield
+    group: default
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     world: overvoid
     group: overvoid
@@ -1147,8 +1147,8 @@ v2-logout:
     group: skywarslobby
     world: skywarslobby
   e6f9f5c3-3903-4d3f-a8ea-5722fe9b9f93:
-    group: plots
-    world: plots
+    group: spawn
+    world: spawn
   878755d0-c73b-4e0c-ba77-5d7db4f63c25:
     group: default
     world: greenfield
