--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10,6 +10,9 @@ groups:
         permissions:
         - ch.alias.carryplayer
         - ch.alias.dismountplayer
+        - ch.alias.websling
+        - ch.alias.web
+        - powers.wallclimb
   dumbledore:
     inheritance:
     - commonherotraits
