--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -17134,7 +17134,7 @@ users:
         permissions: []
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - mortal
+    - ironspider
     options:
       name: mythguy1226
     permissions:
@@ -20412,7 +20412,7 @@ users:
       name: Conner565
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
     group:
-    - blackflash
+    - mortal
     worlds:
       greenfield:
         permissions: []
@@ -20852,6 +20852,14 @@ users:
       greenfield:
         permissions: []
     permissions: []
+  67ad9080-dbbe-4427-a86e-81137dfd2012:
+    group:
+    - venom
+    options:
+      name: theocords2007
+  f2045611-cbdc-49dd-983f-700a44360e36:
+    group:
+    - onepunchman
 worlds:
   checkers:
     inheritance:
