--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -93,7 +93,7 @@ v2-logout:
     world: crossfire
     group: crossfire
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
-    world: survival
+    world: greenfield
     group: default
   869b4227-b51e-452e-adbd-48759a6848dd:
     world: survival
@@ -1020,7 +1020,7 @@ v2-logout:
     world: survival
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
     group: default
-    world: gotham
+    world: greenfield
   471de574-561c-456d-b961-09310747b948:
     group: default
     world: greenfield
@@ -1350,7 +1350,7 @@ v2-logout:
     world: greenfield
   491f25cf-1bf4-40aa-bddb-aecb674dbe92:
     group: default
-    world: greenfield
+    world: survival
   86719dab-867d-493d-a3c1-f74bccb3f913:
     group: default
     world: survival
@@ -1358,5 +1358,8 @@ v2-logout:
     group: default
     world: survival
   1cd63a59-d556-458e-bd4d-6d7f8435ce43:
+    group: default
+    world: greenfield
+  67ad9080-dbbe-4427-a86e-81137dfd2012:
     group: default
     world: greenfield
