--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -30,6 +30,9 @@ players:
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     party: LOL
     rank: 5
+  28556dea-667d-409f-b2ff-fb4177a20ff2:
+    party: LOL
+    rank: 5
 parties:
   anti:
     leader: 34a87619-4b40-4ae8-b759-3efa25bbbffd
@@ -59,3 +62,4 @@ parties:
     members:
     - 4ff867f5-6cab-413e-9fad-e4d77ca48778
     - fbb8c072-4c4b-49c8-948b-26e8ad73099e
+    - 28556dea-667d-409f-b2ff-fb4177a20ff2
