--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -2755,6 +2755,9 @@ groups:
         - ch.alias.haste1
         - ch.alias.hoveron
         - ch.alias.hoveroff
+        - magic.cast.forcefield
+        - magic.cast.telekinisis
+        - magic.commands.cast
   doomsday:
     inheritance:
     - commonherotraits
