--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -28,10 +28,22 @@ players:
     party: foof
     rank: 20
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    party: foof
+    party: AHH
+    rank: 20
+  e6de8cf0-af45-44e4-882f-d98446f4b31b:
+    party: AHH
     rank: 5
   a8185de3-b053-4aca-9eb6-d98728e476ad:
-    party: foof
+    party: AHH
+    rank: 5
+  f621586e-8ef8-448d-9264-86b61375052e:
+    party: AHH
+    rank: 5
+  eb0c7b09-20a0-4a7e-9327-c99e26d11991:
+    party: party
+    rank: 20
+  9025e96a-d286-47b0-a709-98d2a4ee42db:
+    party: party
     rank: 5
 parties:
   anti:
@@ -64,5 +76,15 @@ parties:
     leader: fbb8c072-4c4b-49c8-948b-26e8ad73099e
     members:
     - fbb8c072-4c4b-49c8-948b-26e8ad73099e
+  AHH:
+    leader: 4ff867f5-6cab-413e-9fad-e4d77ca48778
+    members:
     - 4ff867f5-6cab-413e-9fad-e4d77ca48778
+    - e6de8cf0-af45-44e4-882f-d98446f4b31b
     - a8185de3-b053-4aca-9eb6-d98728e476ad
+    - f621586e-8ef8-448d-9264-86b61375052e
+  party:
+    leader: eb0c7b09-20a0-4a7e-9327-c99e26d11991
+    members:
+    - eb0c7b09-20a0-4a7e-9327-c99e26d11991
+    - 9025e96a-d286-47b0-a709-98d2a4ee42db
