--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12064,6 +12064,8 @@ users:
   17b6832f-aae5-4636-a4d9-0e4100879597:
     options:
       name: rodrigo69dj
+    group:
+    - anarchy
   182fa38f-b321-44cf-ba16-fe70847459c3:
     group:
     - artemis
@@ -12420,9 +12422,9 @@ users:
       name: Ethanmc16
   222c7f9b-6d5f-4e7c-9715-f17dba22a8c7:
     group:
-    - godfallsuperman
+    - flashwallywest
     options:
-      name: Batman_DCU
+      name: KidFlashDC
     worlds:
       fightclub:
         permissions: []
@@ -12714,7 +12716,7 @@ users:
       name: ii_Indra
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - missmartian
+    - officer
     options:
       name: X_FoodMeatHark_X
     permissions:
@@ -13153,9 +13155,12 @@ users:
       name: HeyPuddin
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group:
-    - yoda
+    - firestormraymondstein
     options:
       name: Glint73
+    worlds:
+      greenfield:
+        permissions: []
   34b177be-e3f5-4795-8007-bdb9b9a7f41e:
     group:
     - gothamman
@@ -14131,7 +14136,7 @@ users:
       name: TijgerDavy
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
     group:
-    - artemis
+    - mortal
     options:
       name: Taiyou_
     permissions:
@@ -14570,7 +14575,7 @@ users:
       prefix: '&7{&4Hacker, given 2 chances&7} '
   5c6973ec-26db-4352-9374-615fdd87e608:
     group:
-    - apollo
+    - spidermanpeterparker
     options:
       name: LuvPets
     worlds:
@@ -14911,7 +14916,7 @@ users:
       name: Blaze_pvp
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - flashjaygarrick
+    - firestormraymondstein
     options:
       name: NinjagoGamer_MCU
     permissions:
@@ -16583,7 +16588,7 @@ users:
       name: BlueTroubleGamer
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - spidermanpeterparker
+    - doctorstrange
     options:
       name: TonyBongos
     permissions:
@@ -17316,7 +17321,7 @@ users:
       name: grimreaper0202
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - flashwallywest
+    - blacklanternmartianmanhunter
     options:
       name: nightghost2
     permissions:
@@ -18992,7 +18997,7 @@ users:
     group:
     - flashwalterwest
     options:
-      name: iron533
+      name: i_boop_u_now
   d4661a09-b9bf-4300-a631-973051f93fec:
     group:
     - starfire
@@ -19707,7 +19712,7 @@ users:
         permissions: []
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group:
-    - redlanternsupergirl
+    - mortal
     options:
       name: WhatAreThose05
     permissions: []
@@ -19775,9 +19780,11 @@ users:
       name: tron63
   e82ee842-e0c9-4d10-890d-078eb12dd010:
     group:
-    - mortal
+    - savitar
     options:
       name: IamTheNewGroot
+    permissions:
+    - chat.cooldown
   e843f493-4625-4ac1-9190-7e064b04cded:
     options:
       name: WolfeGaming
@@ -19979,7 +19986,7 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - dannyphantom
+    - dazzler
     options:
       name: ___Entity_303___
     permissions: []
@@ -20357,7 +20364,7 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - ironspider
+    - mortal
     options:
       name: mythguy1226
     permissions:
@@ -20954,7 +20961,7 @@ users:
       name: LAPO2015
   4984b457-d51b-4041-975f-280995a8e2ff:
     group:
-    - martianmanhunter
+    - darkseid
     options:
       name: Charizard543210
     worlds:
@@ -21022,8 +21029,7 @@ users:
     worlds:
       greenfield:
         permissions: []
-    permissions:
-    - chat.cooldown
+    permissions: []
   fc252bc6-ef87-447f-8735-28ec6c07731f:
     group:
     - goku
@@ -21081,7 +21087,7 @@ users:
       name: TheAvatarBoy
   f15b523a-14e6-4f59-b040-4d5e254130f6:
     group:
-    - savitar
+    - mortal
     options:
       name: BTLteamTNT_2
     worlds:
@@ -21116,6 +21122,23 @@ users:
     - multiverse.access.underworld
     options:
       name: FlabbyGel
+    group:
+    - antman
+  1deb51af-c9da-4fc3-a702-284e67166087:
+    group:
+    - onepunchman
+    options:
+      name: GoldSheepYT
+  b8e8797a-b5d3-4275-8752-8dbfe2deffe5:
+    group:
+    - flashwallywest
+    options:
+      name: Captain569
+  49aa1c13-e74a-4453-b2ac-7d5cdfbb059a:
+    group:
+    - mortal
+    options:
+      name: ven687
 worlds:
   checkers:
     inheritance:
