--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -48,7 +48,7 @@ v2-logout:
     group: overvoid
     world: overvoid
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: survival
+    world: greenfield
     group: default
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
@@ -87,8 +87,8 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: utopia
-    group: office
+    world: policeoffice
+    group: policeoffice
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: policeoffice
     group: policeoffice
@@ -625,7 +625,7 @@ v2-logout:
     group: default
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: default
-    world: greenfield
+    world: survival
   f1a35d55-39db-4012-a70d-e677f6e91dc3:
     group: default
     world: greenfield
@@ -648,8 +648,8 @@ v2-logout:
     group: default
     world: greenfield
   5c6973ec-26db-4352-9374-615fdd87e608:
-    group: default
-    world: greenfield
+    group: chess
+    world: chess
   632f6506-03c2-4c54-a3af-3e9179e185e3:
     group: default
     world: greenfield
@@ -1208,8 +1208,8 @@ v2-logout:
     group: default
     world: greenfield
   634c2441-9a62-448f-8a75-8507157e8a51:
-    group: default
-    world: greenfield
+    group: deathrun
+    world: deathrun
   96bb98d0-e0f4-4745-b121-76d517a1f482:
     group: default
     world: greenfield
@@ -1529,5 +1529,32 @@ v2-logout:
     group: default
     world: greenfield
   4a8e934f-4f9b-47c6-a16e-340c7aa8e9f5:
+    group: default
+    world: greenfield
+  17b6832f-aae5-4636-a4d9-0e4100879597:
+    group: anarchy
+    world: anarchy
+  1deb51af-c9da-4fc3-a702-284e67166087:
+    group: default
+    world: survival
+  b8e8797a-b5d3-4275-8752-8dbfe2deffe5:
+    group: default
+    world: greenfield
+  5ef42388-36e1-462e-8f67-b62187341524:
+    group: default
+    world: greenfield
+  00506ebe-00f3-4862-8f2e-2e48f644d546:
+    group: default
+    world: survival
+  49aa1c13-e74a-4453-b2ac-7d5cdfbb059a:
+    group: default
+    world: greenfield
+  d4608118-58b2-48e3-8d20-578d5ac3fde2:
+    group: default
+    world: survival
+  4dfaa909-1141-453c-af29-349d19b70ce8:
+    group: default
+    world: greenfield
+  222c7f9b-6d5f-4e7c-9715-f17dba22a8c7:
     group: default
     world: greenfield
