--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -19986,7 +19986,7 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - cosmicarmorsuperman
+    - wonderman
     options:
       name: ___Entity_303___
     permissions: []
@@ -21032,7 +21032,7 @@ users:
     permissions: []
   fc252bc6-ef87-447f-8735-28ec6c07731f:
     group:
-    - goku
+    - vegeta
     options:
       name: Kinglemonade
   ee058ad1-15d2-48df-bfe2-0dab4c8326f9:
@@ -21087,7 +21087,7 @@ users:
       name: TheAvatarBoy
   f15b523a-14e6-4f59-b040-4d5e254130f6:
     group:
-    - mortal
+    - martianmanhunter
     options:
       name: BTLteamTNT_2
     worlds:
