--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1457,8 +1457,8 @@ v2-logout:
     group: default
     world: greenfield
   fc252bc6-ef87-447f-8735-28ec6c07731f:
-    group: plots
-    world: plots
+    group: default
+    world: greenfield
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
     group: default
     world: greenfield
