--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -17347,7 +17347,7 @@ users:
       name: Operation_Gaming
   a8e159ea-deeb-4f73-a246-591b589adcf4:
     group:
-    - firestormraymondstein
+    - spidermanpeterparker
     options:
       name: MrFlameYT
     permissions:
@@ -18888,7 +18888,7 @@ users:
       name: matyou11
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     group:
-    - criminal
+    - mortal
     options:
       name: Minestock451
     permissions: []
@@ -19986,7 +19986,7 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - missmartian
+    - thor
     options:
       name: ___Entity_303___
     permissions: []
