--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -99,8 +99,8 @@ v2-logout:
     world: survival
     group: default
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
-    world: overvoid
-    group: overvoid
+    world: greenfield
+    group: default
   fa8fd4fe-0071-48da-ab2d-f02fa1a2af58:
     group: fightclub
     world: fightclub
@@ -881,8 +881,8 @@ v2-logout:
     group: default
     world: greenfield
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
-    world: policeoffice
-    group: policeoffice
+    world: greenfield
+    group: default
   f310e030-27e8-4f04-b99e-551f89f2d2d4:
     group: spawn
     world: spawn
