--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -7176,6 +7176,8 @@ groups:
         - plots.claim
       policeoffice:
         permissions:
+        - -essentials.build.interact.77:0
+        - -essentials.build.interact.77
         - -essentials.build.interact.70:*
         - -essentials.build.interact.70
         - essentials.protect.pvp
