--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1185,7 +1185,7 @@ v2-logout:
     world: skywarslobby
   c9125267-b5c8-42ed-8572-cb3d1d07c9da:
     group: default
-    world: survival
+    world: greenfield
   5740ca89-c192-49a9-a84c-987b0674a913:
     group: newminigamehub
     world: newminigamehub
