--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11201,9 +11201,7 @@ users:
     options:
       name: xDcGamer_MCU
     permissions:
-    - ch.alias.onduty
     - is.secretary
-    - is.officer
     - essentials.warps.office
     - essentials.warps.officeadmin
     - multiverse.access.office
@@ -11551,7 +11549,7 @@ users:
       name: TonyStarkIM
   0889f21e-b82c-49a0-ab3c-6e5b0232d093:
     group:
-    - criminal
+    - vision
     options:
       name: Oranges_are_glad
     permissions:
@@ -12360,7 +12358,7 @@ users:
       name: Xenq
   2015bc7d-316e-4939-b5d1-c1cf0062ad8d:
     group:
-    - ultramanearththree
+    - robocop
     options:
       name: SkeletonKid2007
     permissions:
@@ -12718,12 +12716,10 @@ users:
       name: ii_Indra
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - officer
+    - missmartian
     options:
       name: X_FoodMeatHark_X
-    permissions:
-    - is.officer
-    - ch.alias.onduty
+    permissions: []
     worlds:
       LostInGalaxeh_:
         permissions: []
@@ -13469,7 +13465,7 @@ users:
       name: AlexBayBlade
   3e9e827f-e168-4d74-b083-60ebdda5020e:
     group:
-    - mortal
+    - ironmanmkxliii
     options:
       name: kazookid560
     permissions: []
@@ -14011,7 +14007,7 @@ users:
       name: EnderTyanKawaii
   4c32a4ab-0fe1-40b9-b472-066b6e6253a0:
     group:
-    - godfallsuperman
+    - godspeed
     options:
       name: The_Rip_Hunter
   4c607160-0c87-40de-a9eb-d7b7683a4475:
@@ -14622,7 +14618,7 @@ users:
       name: WeabooSensei
   5ef42388-36e1-462e-8f67-b62187341524:
     group:
-    - blacklanterneobardthawne
+    - bluelanternbarryallen
     options:
       name: TNT123456
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
@@ -15032,11 +15028,13 @@ users:
     permissions: []
   695c4d78-22c5-40e4-b0d4-286ab17c02cf:
     group:
-    - superman
+    - blacklanterndeathstormraymondrusch
     options:
       name: _GodSpeedCW_
     worlds:
       garbageworld:
+        permissions: []
+      fightclub:
         permissions: []
   699adb2d-b85e-4702-ac97-41b9b971ba66:
     group:
@@ -15301,7 +15299,7 @@ users:
       name: KawaiiBrownTwig
   706e34e9-e166-4de1-9a0e-528bee0703b3:
     group:
-    - shazam
+    - ultramanearththree
     options:
       name: 64batsalex
     permissions:
@@ -16191,7 +16189,7 @@ users:
       name: Astql
   869b4227-b51e-452e-adbd-48759a6848dd:
     group:
-    - fanfic869b4227b51e452eadbd48759a6848dd
+    - officer
     options:
       name: Grim765Reaper
     permissions:
@@ -16590,10 +16588,12 @@ users:
       name: BlueTroubleGamer
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - doctorstrange
+    - officer
     options:
       name: TonyBongos
     permissions:
+    - is.officer
+    - ch.alias.onduty
     - multiverse.access.underworld
     - is.secretary
     - essentials.warps.office
@@ -17323,7 +17323,7 @@ users:
       name: grimreaper0202
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - blacklanternmartianmanhunter
+    - officer
     options:
       name: nightghost2
     permissions:
@@ -17349,7 +17349,7 @@ users:
       name: Operation_Gaming
   a8e159ea-deeb-4f73-a246-591b589adcf4:
     group:
-    - spidermanpeterparker
+    - redlanternsupergirl
     options:
       name: MrFlameYT
     permissions:
@@ -17415,7 +17415,7 @@ users:
       name: _Spaces_
   aa5a230a-0b78-4218-a925-7e76b5f451d5:
     group:
-    - thor
+    - onepunchman
     options:
       name: Skyflyer_
   aa641aaa-a21c-4941-a53b-5b75b3e47e3a:
@@ -17788,9 +17788,14 @@ users:
         permissions: []
   b341708c-7d8f-49bf-93f7-8d76550ed02b:
     group:
-    - martianmanhunter
+    - beerus
     options:
-      name: _KidFlashCW_
+      name: _DanielWestCW_
+    worlds:
+      greenfield:
+        permissions: []
+      fightclub:
+        permissions: []
   b3a6e6c4-004e-478a-9050-fa86879eee51:
     group:
     - antman
@@ -18019,13 +18024,15 @@ users:
       name: wolve15
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group:
-    - dannyphantom
+    - onepunchman
     options:
       name: mintwhip
     permissions:
     - multiverse.access.underworld
     worlds:
       greenfield:
+        permissions: []
+      fightclub:
         permissions: []
   b95c578e-7098-4cfc-b72f-5d8ff212c3a6:
     group:
@@ -18639,7 +18646,7 @@ users:
       name: kiroe_cool
   c9125267-b5c8-42ed-8572-cb3d1d07c9da:
     group:
-    - invisiblewoman
+    - silversurfer
     options:
       name: WhiteWolf001
   c967fde2-03fb-4ed0-9997-b7d41a2c1030:
@@ -18654,7 +18661,7 @@ users:
       name: Zejtko12
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - mortal
+    - sergeant
     options:
       name: HerpaDerp10000
     permissions:
@@ -18890,7 +18897,7 @@ users:
       name: matyou11
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     group:
-    - mortal
+    - despero
     options:
       name: Minestock451
     permissions: []
@@ -19714,10 +19721,15 @@ users:
         permissions: []
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group:
-    - mortal
+    - sergeant
     options:
       name: WhatAreThose05
-    permissions: []
+    permissions:
+    - ch.alias.onduty
+    - is.sergeant
+    worlds:
+      greenfield:
+        permissions: []
   e6f9f5c3-3903-4d3f-a8ea-5722fe9b9f93:
     group:
     - ironmanmkxv
@@ -20128,7 +20140,7 @@ users:
       name: CaPiTaInE_FuSiOn
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
     group:
-    - blackracerwilliewalker
+    - darkseid
     options:
       name: superiorxman
     permissions:
@@ -20883,6 +20895,8 @@ users:
     worlds:
       fightclub:
         permissions: []
+    permissions:
+    - chat.cooldown
   reverseflash:
     worlds:
       survival:
@@ -20923,7 +20937,7 @@ users:
       name: OutlawOpossum68
   5da26092-c807-4c9b-8d08-9523f74ddc97:
     group:
-    - doctorstrange
+    - savitar
     options:
       name: Masterable
     worlds:
@@ -21018,6 +21032,11 @@ users:
     - goku
     options:
       name: ZeEnforcer
+    worlds:
+      greenfield:
+        permissions: []
+      fightclub:
+        permissions: []
   17262e3d-f8f9-4569-8529-c23f5c01bf4f:
     group:
     - onepunchman
@@ -21089,7 +21108,7 @@ users:
       name: TheAvatarBoy
   f15b523a-14e6-4f59-b040-4d5e254130f6:
     group:
-    - martianmanhunter
+    - galactus
     options:
       name: BTLteamTNT_2
     worlds:
@@ -21141,6 +21160,35 @@ users:
     - mortal
     options:
       name: ven687
+  fb0ddd27-aeec-45bc-92c4-c26d5f38a7ef:
+    group:
+    - bobafett
+    options:
+      name: jowa2
+  9b30c8ee-fc55-49fd-ad0b-f5576871ad2d:
+    group:
+    - mewtwo
+    options:
+      name: BadTimeBluBerry
+  ff0fec80-b8d2-4d10-8951-3061c6e7181d:
+    group:
+    - wonderwoman
+    options:
+      name: Ultimate_Gamer00
+  aba5a53e-a89a-4f89-8ef4-a060280938d9:
+    group:
+    - cyborg
+    options:
+      name: Da0zone
+    worlds:
+      greenfield:
+        permissions: []
+    permissions: []
+  02193de3-64a0-4a18-88ce-95c096cd60e7:
+    group:
+    - blacklanterndeathstormraymondrusch
+    options:
+      name: Dolphino34
 worlds:
   checkers:
     inheritance:
