--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     world: hilariousrace
     group: hilariousrace
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    world: spawn
-    group: spawn
+    world: policeoffice
+    group: policeoffice
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     world: greenfield
     group: default
@@ -33,8 +33,8 @@ v2-logout:
     group: default
     world: greenfield
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: default
-    world: greenfield
+    group: spleeflobby
+    world: spleeflobby
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: office
     group: office
@@ -45,11 +45,11 @@ v2-logout:
     group: default
     world: survival
   0889f21e-b82c-49a0-ab3c-6e5b0232d093:
-    group: overvoid
-    world: overvoid
+    group: crossfire
+    world: crossfire
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
@@ -66,8 +66,8 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: greenfield
-    group: default
+    world: plots
+    group: plots
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
     world: crossfire
@@ -96,8 +96,8 @@ v2-logout:
     world: survival
     group: default
   869b4227-b51e-452e-adbd-48759a6848dd:
-    world: survival
-    group: default
+    world: policeoffice
+    group: policeoffice
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     world: greenfield
     group: default
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: default
     world: survival
@@ -195,8 +195,8 @@ v2-logout:
     group: default
     world: greenfield
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
-    group: deathrun
-    world: deathrun
+    group: spleef
+    world: spleef
   78af88f4-cd13-4950-a737-7d36b15ead56:
     group: default
     world: greenfield
@@ -298,7 +298,7 @@ v2-logout:
     world: office
   eb0c7b09-20a0-4a7e-9327-c99e26d11991:
     group: default
-    world: survival_nether
+    world: survival
   eeedc19e-0249-46e0-8efb-1a096a456144:
     group: default
     world: greenfield
@@ -402,8 +402,8 @@ v2-logout:
     group: default
     world: greenfield
   a8185de3-b053-4aca-9eb6-d98728e476ad:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   03bd377c-eb0d-4e84-b733-e27fd9a954b1:
     group: default
     world: greenfield
@@ -511,7 +511,7 @@ v2-logout:
     world: greenfield
   aa5a230a-0b78-4218-a925-7e76b5f451d5:
     group: default
-    world: survival
+    world: greenfield
   d7f74a1d-dc35-448b-ba09-a024712d5969:
     group: default
     world: greenfield
@@ -1019,8 +1019,8 @@ v2-logout:
     group: default
     world: survival
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
-    group: default
-    world: greenfield
+    group: spleeflobby
+    world: spleeflobby
   471de574-561c-456d-b961-09310747b948:
     group: default
     world: greenfield
@@ -1128,7 +1128,7 @@ v2-logout:
     world: greenfield
   2015bc7d-316e-4939-b5d1-c1cf0062ad8d:
     group: default
-    world: greenfield
+    world: survival
   64b8a2a3-1ddf-4acd-9c4d-b601a4f93f86:
     group: default
     world: survival
@@ -1413,7 +1413,7 @@ v2-logout:
     world: spawn
   4984b457-d51b-4041-975f-280995a8e2ff:
     group: default
-    world: greenfield
+    world: survival
   623dd8da-2896-48a1-a325-150cfa11488e:
     group: default
     world: greenfield
@@ -1445,8 +1445,8 @@ v2-logout:
     group: default
     world: greenfield
   07fcb131-3dc4-44b8-b275-3e110068c267:
-    group: spawn
-    world: spawn
+    group: default
+    world: greenfield
   17262e3d-f8f9-4569-8529-c23f5c01bf4f:
     group: default
     world: greenfield
@@ -1460,8 +1460,8 @@ v2-logout:
     group: default
     world: greenfield
   9068e658-a14f-43a3-ad65-04dbac12a5e0:
-    group: default
-    world: greenfield
+    group: office
+    world: office
   ee058ad1-15d2-48df-bfe2-0dab4c8326f9:
     group: default
     world: greenfield
@@ -1496,8 +1496,8 @@ v2-logout:
     group: default
     world: greenfield
   f7263849-baba-4d78-9018-3d790b86bf6b:
-    group: overvoid
-    world: overvoid
+    group: default
+    world: greenfield
   f15b523a-14e6-4f59-b040-4d5e254130f6:
     group: default
     world: greenfield
@@ -1556,5 +1556,32 @@ v2-logout:
     group: default
     world: greenfield
   222c7f9b-6d5f-4e7c-9715-f17dba22a8c7:
+    group: default
+    world: greenfield
+  b341708c-7d8f-49bf-93f7-8d76550ed02b:
+    group: default
+    world: survival
+  9b30c8ee-fc55-49fd-ad0b-f5576871ad2d:
+    group: default
+    world: greenfield
+  fb0ddd27-aeec-45bc-92c4-c26d5f38a7ef:
+    group: default
+    world: greenfield
+  695c4d78-22c5-40e4-b0d4-286ab17c02cf:
+    group: default
+    world: greenfield
+  ff0fec80-b8d2-4d10-8951-3061c6e7181d:
+    group: default
+    world: survival
+  aba5a53e-a89a-4f89-8ef4-a060280938d9:
+    group: default
+    world: greenfield
+  02193de3-64a0-4a18-88ce-95c096cd60e7:
+    group: default
+    world: greenfield
+  698b56e3-6407-418b-8b03-076510ef1fa2:
+    group: default
+    world: greenfield
+  2312d698-cebb-44e2-8069-5f4e7e3a6c15:
     group: default
     world: greenfield
