--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,26 @@
 groups:
+  jasongrace:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&5Jas&7on &7Gr&eac&5e'
+      suffix: '&e'
+    worlds:
+      survival:
+        permissions:
+        - essentials.fly
+        - essentials.lightning
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.lightning
   3dmanchuckandhal:
     inheritance:
     - commonherotraits
