--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1973,6 +1973,34 @@ groups:
         - ch.alias.run1
         - ch.alias.haste0
         - ch.alias.haste1
+ jessicajones:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&9Je&8ss&7ic&fa J&7on&8es'
+      suffix: '&9'
+    worlds:
+      survival:
+        permissions:
+        - essentials.fly
+        - essentials.speed.fly
+        - -essentials.protect.damage.fall
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.jump5
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
   cheetah:
     inheritance:
     - commonherotraits
